<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            />

        <item
            android:id="@+id/nav_example"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/examples"
            />


        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"
            />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"
            />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share_the_app"
            />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_code_24"
            android:title="@string/about_us"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/log_out"
            />



    </group>

</menu>